<resources>
    <string name="app_name">Favourite Movies</string>
    <string name="title_movie_activity">Create Movie</string>
    <string name="title_about_activity">About</string>
    <string name="text_view_rating">Rating</string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Favourite Movies</string>
    <string name="nav_header_subtitle">Developer:</string>
    <string name="nav_header_subtitle_name">Soós Roland</string>
    <string name="nav_header_subtitle_email_title">Email support at:</string>
    <string name="nav_header_subtitle_email">soos.roland1996@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Movies</string>
    <string name="menu_gallery">About</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="copy_right">© 2019 soosroland</string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="empty_movies">No movies</string>
    <string name="name_required">Name required</string>
    <string name="input_title">Title</string>
    <string name="input_year">Year</string>
    <string name="input_rating">Rating</string>
    <string name="title_label">Title</string>
    <string name="year_label">Year</string>
    <string name="rating_label">Rating</string>
</resources>
