<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.movie.MovieActivity"
    tools:showIn="@layout/app_bar_movie">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        android:textSize="22sp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:nextFocusDown="@+id/etYear"
        android:nextFocusForward="@+id/etYear"
        android:imeOptions="actionNext"
        android:hint="@string/input_title"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_label"
        android:textSize="22sp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:nextFocusDown="@+id/etRating"
        android:nextFocusForward="@+id/etRating"
        android:imeOptions="actionNext"
        android:hint="@string/input_year"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_label"
        android:textSize="22sp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/etRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:imeOptions="actionDone"
        android:hint="@string/input_rating"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Force Crash!"
        android:onClick="forceCrash"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:gravity="bottom|end">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/button_cancel"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/button_save"/>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>